tests/invalid/Parameter_Invalid_2.whiley
function f(int $) -> int:
    return 1
